--- a/main.html
+++ b/main.html
@@ -54,8 +54,8 @@
 		Answer: Inline
 	</div>
 	<div>
-		<sub data-ns-test="block-inline-input">Test1</sub>
-		<sub data-ns-test="block-inline-input">Test2</sub>
+		<sub data-ns-test="block-inline-sub">Test1</sub>
+		<sub data-ns-test="block-inline-sub">Test2</sub>
 		Answer: Inline
 	</div>
     <script type="text/javascript" src="./script.js">
